Weather api return .env.example to git

--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ DB_USERNAME=homestead
 DB_PASSWORD=secret
 
 SHOW_ERRORS=true
+
+OPENWEATHERMAP=d0a10211ea3d36b0a6423a104782130e
+OPENWEATHERMAP_UNITS=metric
