--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "twig/twig": "~2.0",
         "vlucas/phpdotenv": "v2.4.*",
-        "cmfcmf/openweathermap-php-api": "^2.2"
+        "cmfcmf/openweathermap-php-api": "^2.2",
+        "fastfeed/fastfeed": "^0.4.0"
     },
     "autoload": {
         "psr-4": {
