remove .env from git

--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ SHOW_ERRORS=true
 
 OPENWEATHERMAP=d0a10211ea3d36b0a6423a104782130e
 OPENWEATHERMAP_UNITS=metric
+
+RSS=https://feeds.bbci.co.uk/news/rss.xml
