--- a/.env
+++ b/.env
@@ -11,3 +11,4 @@ OPENWEATHERMAP=d0a10211ea3d36b0a6423a104782130e
 OPENWEATHERMAP_UNITS=metric
 
 RSS=https://feeds.bbci.co.uk/news/rss.xml
+CLOTHES_URL=https://therapy-box.co.uk/hackathon/clothing-api.php?username=swapnil
