--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
         "vlucas/phpdotenv": "v2.4.*",
         "cmfcmf/openweathermap-php-api": "^2.2",
         "fastfeed/fastfeed": "^0.4.0",
-        "league/csv": "^9.1"
+        "league/csv": "^9.1",
+        "guzzlehttp/guzzle": "^6.3"
     },
     "autoload": {
         "psr-4": {
