--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
         "cmfcmf/openweathermap-php-api": "^2.2",
         "fastfeed/fastfeed": "^0.4.0",
         "league/csv": "^9.1",
-        "guzzlehttp/guzzle": "^6.3"
+        "guzzlehttp/guzzle": "^6.3",
+        "phpunit/phpunit": "^7.0",
+        "mikey179/vfsStream": "^1.6"
     },
     "autoload": {
         "psr-4": {
